--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/assets/css/main.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" 
 rel="stylesheet">
+<link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body>
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 18/08/2022</h1>
