--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/assets/css/main.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" 
 rel="stylesheet">
+<link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body>
     <h1 class="index_h1">view all changelog here</h1>
