fixes to changelog on mobile/ small screens

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -12,12 +12,30 @@ rel="stylesheet">
 </head>
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 18/08/2022</h1>
+    <hr>
+<h2> v11.2-rc1 (released 18/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/63">#63</a>:</h2>
+<p>
+    this updates includes: <br>
+    - new blog post <br>
+    - updated index_blog_section which now displays blog 6 and blog 5 preview cards <br>
+    - removed changelog.md file which has been moved to it own repository<br>
+    - added/ updated links to brand new changelog.html file <br>
+    - updated changelog img thumbnail preview on the project card <br>
+    - updated changelog svg icon on the changelog project card<br>
+</p>
+<hr>
+<h2> v11.2-dev3 (released 18/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/a80ca2f80f34e05cb0dc0ced6af97891a83289d8">#dev3</a>:</h2>
+<p>
+    this dev updates includes: <br>
+    - updated changelog img thumbnail preview on the project card <br>
+    - updated changelog svg icon on the changelog project card<br>
+</p>
 <hr>
 <h2> v11.2-dev2 (released 18/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/0a0e6c50198b4d1b36f900ab6cbfe4177d6ff414">#dev2</a>:</h2>
 <p>
     this dev updates includes: <br>
-    - new link to changelog page <br>
-    - new chnagelog img thumbnail preview on project card <br>
+    - new updated link to changelog page <br>
+    - new changelog img thumbnail preview on project card <br>
     - updated index_blog_section to display blog 6 and blog 5 preview cards <br>
 </p>
 <hr>
