--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -78,7 +78,7 @@ rel="stylesheet">
 - removed some js files that arent being used anymore <br>
 - new links added to nav bar and new dropdown menu added including link to hannah'svlogs (new vlogging channel coming soon) <br>
 - fixed nav bar not displaying on blog post page when viewing from a mobile/ small screen device  <br>
-- new blog post 5(<a href="https://hannahcodes.co.uk/blogs/post/22/08/10_08_22_my_trip_to_london.html">https://hannahcodes.co.uk/blogs/post/22/08/10_08_22_my_trip_to_london.html</a>) <br>
+- new blog post 5(<a href="https://hannahcodes.co.uk/blogs/post/22/08/10_08_22_my_trip_to_london.html">my trip to london</a>) <br>
 - updated blog post 3's thumbnail image preview. <br>
 - fixed some comments in .scss/ .css file <br>
 - new thumbnail preview image for dev/rc project cards (from hc-v11.jpg to hc-v11.1.jpg) <br>
@@ -132,7 +132,7 @@ rel="stylesheet">
     - new links added to nav bar and new dropdown menu added <br>
     - fixed nav bar not displaying on blog post page when viewing from a mobile/ small screen device <br>
     - renamed some blog home/post page code to make my css/ html code easier to understand. <br>
-    -  new blog post 5(<a href="https://dev.hannahcodes.co.uk/blogs/post/22/08/10_08_22_my_trip_to_london.html">https://dev.hannahcodes.co.uk/blogs/post/22/08/10_08_22_my_trip_to_london.html</a>) <br>
+    -  new blog post 5(<a href="https://dev.hannahcodes.co.uk/blogs/post/22/08/10_08_22_my_trip_to_london.html">my trip to london</a>) <br>
     - updated blog post 3's thumbnail image preview. <br>  
 </p>
 <hr>
