--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,7 +11,7 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 18/08/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 20/08/2022</h1>
     <hr>
 <h2> v11.2-rc1 (released 18/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/63">#63</a>:</h2>
 <p>
@@ -123,7 +123,7 @@ rel="stylesheet">
 <hr>
 <h2> v11.1-rc1 (released: 10/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/54">#54</a>:</h2>
 <p>
-    this update includes:
+    this update includes: <br>
     - new blog post design <br>
     - blog posts now display images not just show text. <br>
     - brand new homepage index.html (still in the works so its not completed yet) for an upcoming vlog channel I am working on <br>
@@ -221,6 +221,71 @@ rel="stylesheet">
  this update includes: <br> 
  - some imges code fixes <br> 
  - and new Recent Post ui experience <br>
+</p>
+<hr>
+<h2> v10.1-rc2 (released: 22/06/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/43">#43</a>:</h2>
+<p>
+ this small update removes: <br> 
+ - bootstrap css file <br> 
+</p>
+<hr>
+<h2> v10.1-rc1 (released: 22/06/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/42">#42</a>:</h2>
+<p>
+    this update includes: <br>
+    - updated blog page which now no longer uses bootstrap <br> 
+    - also fixed some project cards on projects.html not displaying correctly <br>
+</p>
+<hr>
+<h2> v10 full release (released: 26/04/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/41">#41</a>:</h2>
+<p>
+    this update includes: <br>
+- loads of fixes and improvements as well <br>
+- brand new light mode <br>
+- brand new blog page. <br>
+</p>
+<hr>
+<h2> v10-rc9 (released: 26/04/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/40">#40</a>:</h2>
+<p>
+    this update adds: <br>
+    - version 9 code to old directory/folder <br> 
+    - and new card on projects.html <br>
+</p>
+<hr>
+<h2> v10-rc8 (released: 26/04/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/39">#39</a>:</h2>
+<p>
+    this update includes: <br>
+- further improvements to blog nav bar on smaller screens <br>
+</p>
+<hr>
+<h2> v10-rc7 (released: 26/04/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/38">#38</a>:</h2>
+<p>
+    this small update includes: <br>
+    - increased size of blog page on a smaller screen like a iPad pro 12.9" <br>
+</p>
+<hr>
+<h2> v10-rc6 (released: 26/04/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/37">#37</a>:</h2>
+<p>
+    this update improves: <br>
+- blog post layout on larger screens <br>
+</p>
+<hr>
+<h2> v10-rc5 (released: 26/04/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/36">#36</a>:</h2>
+<p>
+    this updates includes: <br>
+- further improvements to nav bar on blog page <br> 
+- plus added some padding to the logo on smaller screen on the main site. <br>
+</p>
+<hr>
+<h2> v10-rc4 (released: 26/04/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/35">#35</a>:</h2>
+<p>
+    this update fixes: <br>
+- blog nav links and logo not displaying correctly on blog.html page. <br>
+</p>
+<hr>
+<h2> v10-rc3 (released: 26/04/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/34">#34</a>:</h2>
+<p>
+    this update fixes: <br> 
+- blog page on big screens <br>
 </p>
 <hr>
 </body>
