--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,6 +13,17 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 20/08/2022</h1>
     <hr>
+    <h2> v11.2-rc2 (released 24/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/64">#64</a></h2>
+    <p>
+        this small updates: <br>
+        - about text on index and about.html <br>
+    </p>
+    <h2> v11.2-dev4 (released 24/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/0b0242c20d113be2290e1a31745244f4e4d32e0f">#dev4</a></h2>
+    <p>
+        this small updates: <br>
+        - about text on index and about.html <br>
+    </p>
+    <hr>
 <h2> v11.2-rc1 (released 18/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/63">#63</a>:</h2>
 <p>
     this updates includes: <br>
