--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,8 +11,16 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 24/08/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 30/08/2022</h1>
     <hr>
+    <h2> v11.2-dev5 (released 30/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/36307e72b568a3e392b63e9e0f6c5578fc54db21">#dev5</a></h2>
+    <p>
+        this update includes: <br>
+        - updated about me image <br>
+        - added this gcse math result to the college table on about.html <br>
+        - updated some project card thumbnail image previews <br>
+        - added links to my new alt twitter account <br>
+    </p>
     <h2> v11.2-rc2 (released 24/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/64">#64</a></h2>
     <p>
         this small updates: <br>
@@ -295,6 +303,30 @@ rel="stylesheet">
 <p>
     this update fixes: <br> 
 - blog page on big screens <br>
+</p>
+<h2> v10-rc2 (released: 26/04/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/33">#33</a>:</h2>
+<p>
+    this update fixes: <br> 
+    - dark mode on blog page for mobile <br>
+</p>
+<h2> v10-rc1 (released: 26/04/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/31">#31</a>:</h2>
+<p>
+    this update includes: <br>
+- brand new light mode <br>
+- brand new blog page <br>
+- plus loads of bug fixes <br>
+known issue: <br>
+- mobile nav bar for blog page on dark mode doesn’t display correct background colour. <br>
+</p>
+<hr>
+<h2> v9 full release (released: 29/03/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/26">#26</a>:</h2>
+<p>
+    this update includes: <br>
+    - a brand new redesign  <br>
+    - improved responsiveness <br>
+    - updated about section <br>
+    - added more cards to the projects page <br>
+    - also fixed old versions not displaying correctly (v5/v6) <br>
 </p>
 <hr>
 </body>
