--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,6 +13,11 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 30/08/2022</h1>
     <hr>
+    <h2> v11.2-dev6, dev 7, dev 8 (released 30/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/4441062f297835b8ab4be24309a172b88e8d6abd">#dev6</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/9c296c6bfbceccf3f85e5518da0fd4021f414918">#dev7</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/9cf2f8ef5068c57bce6382210026ddebfccbd796">#dev8</a></h2>
+    <p>
+        these very small updates update: <br>
+        - README.MD file <br>
+    </p>
     <h2> v11.2-dev5 (released 30/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/36307e72b568a3e392b63e9e0f6c5578fc54db21">#dev5</a></h2>
     <p>
         this update includes: <br>
