updated hannahcodes changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -342,5 +342,93 @@ known issue: <br>
     - added more cards to the projects page <br>
     - also fixed old versions not displaying correctly (v5/v6) <br>
 </p>
+<h2> v9-rc8 (released: 29/03/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/27">#27</a>:</h2>
+<p>
+    this update fixes: <br>
+- some links on projects.html <br>
+</p>
+<h2> v9-rc7 (released: 29/03/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/25">#25</a>:</h2>
+<p>
+    this update includes: <br>
+    - further fixes to mobile experience <br>
+</p>
+<h2> v9-rc6 (released: 29/03/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/24">#24</a>:</h2>
+<p>
+    this update improves: <br>
+    - mobile experience <br>
+</p>
+<h2> v9-rc5 (released: 27/03/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/23">#23</a>:</h2>
+<p>
+    this update adds: <br>
+    -  new table for my qualifications i gained while at cameo <br>
+</p>
+<h2> v9-rc4 (released: 27/03/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/22">#22</a>:</h2>
+<p>
+    this update updates: <br>
+    - about text/section <br>
+    - and hc v9 cards image preview <br>
+</p>
+<h2> v9-rc3 (released: 25/03/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/21">#21</a>:</h2>
+<p>
+    this update updates: <br>
+    - about me link on index.html <br>
+</p>
+<h2> v9-rc2 (released: 21/03/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/20">#20</a>:</h2>
+<p>
+    this update includes: <br>
+    - brand new card changes and improvements <br>
+</p>
+<h2> v9-rc1 (released: 20/03/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/19">#19</a>:</h2>
+<p>
+    this update includes: <br>
+    - a brand new redesign and improvements <br>
+</p>
 <hr>
+<h2> v8.1 (released: 09/01/2022-27/12/2021) :</h2>
+<p>
+    these update includes: <br>
+    <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/15">#15</a>: a brand new redesign and improvements <br>
+    <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/14">#14</a>: updated copyright year <br>
+    <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/13">#13</a>: fixed overflow issues <br>
+    <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/12">#12</a>: fixed v7 code <br>
+    <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/11">#11</a>: added and uploaded v7 code to /old directory and updated links <br>
+</p>
+<hr>
+<h2> v8 (released: 07/12/2021) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/9">#9</a>:</h2>
+<p>
+    this update includes: <br>
+    - brand new about section/about page and bug fixes <br>
+</p>
+<hr>
+<h2> v7 (released: 04/10/2021-13/09/2021) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/7">#7</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/6">#6</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/5">#5</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/4">#4</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/3">#3</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/2">#2</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/1">#1</a>:</h2>
+<p>
+    these update includes: <br>
+    -  updated nav links <br>
+    -  updated favicon <br>
+    -  updated folder names <br>
+    -  aligment fixes <br>
+    -  removed some files that were no longer needed <br>
+    -  updated some text <br>
+</p>
+<hr>
+<h2> v6:</h2>
+<p>
+    this update added: <br>
+    - new header image <br>
+    - other code fixes and changes <br>
+</p>
+<h2> v5:</h2>
+<p>
+    this update includes: <br>
+    - brand new website built from the ground up <br>
+</p>
+<hr>
+<h2> v4:</h2>
+<p>
+    this update includes: <br>
+    - fixes to menu icon aligment<br>
+    - fixes to text name and icon aligment on friends section on index.html and friends.html<br>
+</p>
+<hr>
+<h2> --------end of changelog-------- </h2>
 </body>
