updated hannah codes changelog which now includes all versions that have been released

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,7 +11,7 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 30/08/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 31/08/2022</h1>
     <hr>
     <h2> v11.2-rc3 (released 30/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/65">#65</a></h2>
     <p>
@@ -415,12 +415,15 @@ known issue: <br>
 <p>
     this update added: <br>
     - new header image <br>
-    - other code fixes and changes <br>
+    - other code fixes, changes and improvements<br>
 </p>
+<hr>
 <h2> v5:</h2>
 <p>
     this update includes: <br>
     - brand new website built from the ground up <br>
+    - combied desktop and mobile code into one file using @media quary<br>
+
 </p>
 <hr>
 <h2> v4:</h2>
@@ -428,6 +431,29 @@ known issue: <br>
     this update includes: <br>
     - fixes to menu icon aligment<br>
     - fixes to text name and icon aligment on friends section on index.html and friends.html<br>
+    - other changes, fixes and improvments <br>
+</p>
+<hr>
+<h2> v3:</h2>
+<p>
+    this update includes: <br>
+    - brand new homepage design <br>
+    - other changes, fixes and improvments <br>
+</p>
+<hr>
+<h2> v2:</h2>
+<p>
+    this update includes: <br>
+    - new website menu layout <br>
+    - new dark mode <br>
+    - fixes to 'view mobile' site link on footer 
+    - plus other changes, fixes and improvments <br>
+</p>
+<hr>
+<h2> v1:</h2>
+<p>
+    this update includes: <br>
+    - first version of hannahcodes.co.uk website <br>
 </p>
 <hr>
 <h2> --------end of changelog-------- </h2>
