--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,6 +13,16 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 31/08/2022</h1>
     <hr>
+    <h2> v11.2-dev10 (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/305c7de628cf7e4a28cbb71e5d5fa1b562a389b6">#dev10</a></h2>
+    <p>
+        this small update updates: <br>
+        - v11.2 image preview <br>
+    </p>
+    <h2> v11.2-dev9 (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/f4bdbfcf1b4db8d09d7489e525e6917cfe96732f">#dev9</a></h2>
+    <p>
+        this small update fixes: <br>
+        - index about text <br>
+    </p>
     <h2> v11.2-rc3 (released 30/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/65">#65</a></h2>
     <p>
         this update includes: <br>
