--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -34,7 +34,7 @@ rel="stylesheet">
     </p>
     <h2> v11.2-dev6, dev 7, dev 8 (released 30/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/4441062f297835b8ab4be24309a172b88e8d6abd">#dev6</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/9c296c6bfbceccf3f85e5518da0fd4021f414918">#dev7</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/9cf2f8ef5068c57bce6382210026ddebfccbd796">#dev8</a></h2>
     <p>
-        these very small updates update: <br>
+        these very small update updates: <br>
         - README.MD file <br>
     </p>
     <h2> v11.2-dev5 (released 30/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/36307e72b568a3e392b63e9e0f6c5578fc54db21">#dev5</a></h2>
