--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,6 +13,12 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 31/08/2022</h1>
     <hr>
+   
+    <h2> v11.2-dev11 (released 31/08/2022) <a href=" https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/583baca6d7f88f3821f2e599104c4b8ad51687d0">#dev11</a></h2>
+    <p>
+        this small update updates: <br>
+        - readme.md file <br>
+    </p>
     <h2> v11.2-dev10 (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/305c7de628cf7e4a28cbb71e5d5fa1b562a389b6">#dev10</a></h2>
     <p>
         this small update updates: <br>
