updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,7 +13,13 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 31/08/2022</h1>
     <hr>
-   
+    <h2> v11.2-rc4 (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/66">#66</a></h2>
+    <p>
+        this small update includes: <br>
+        - fixes to index about text <br>
+        - updated v11.2 image preview <br>
+        - updated readme.md file <br>
+    </p>
     <h2> v11.2-dev11 (released 31/08/2022) <a href=" https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/583baca6d7f88f3821f2e599104c4b8ad51687d0">#dev11</a></h2>
     <p>
         this small update updates: <br>
