updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,6 +13,23 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 31/08/2022</h1>
     <hr>
+    <h2> v11.2 full update (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/67">#67</a></h2>
+    <p>
+        this update includes: <br>
+        - new blog post <br>
+        - updated index_blog_section which now displays blog 6 and blog 5 preview cards <br>
+        - removed changelog.md file which has been moved to it own repository <br>
+        - added/ updated links to brand new changelog.html file <br>
+        - updated changelog img thumbnail preview on the project card <br>
+        - updated changelog svg icon on the changelog project card <br>
+        - updated and fixed about text on index and about.html <br>
+        - updated about me image <br>
+        - added this gcse math result to the college table on about.html <br>
+        - updated some project card thumbnail image previews <br>
+        - added links to my new alt twitter account <br>
+        - updated readme.md file <br>
+        - updated v11.2 image preview <br>
+    </p>
     <h2> v11.2-rc4 (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/66">#66</a></h2>
     <p>
         this small update includes: <br>
