updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,6 +13,20 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 31/08/2022</h1>
     <hr>
+    <h2> v11.2.1 full release (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/69">#69</a></h2>
+    <p>
+        this small update removes/adds: <br>
+        - some html comments on blog page and blog posts <br>
+        -  adds v11.1 to old folder <br> 
+        - adds a new card for v11.1 of hannahcodes.co.uk <br>
+    </p>
+    <h2> v11.2.1-rc1 (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/68">#68</a></h2>
+    <p>
+        this small update removes/adds: <br>
+        - some html comments on blog page and blog posts <br>
+        -  adds v11.1 to old folder <br> 
+        - adds a new card for v11.1 of hannahcodes.co.uk <br>
+    </p>
     <h2> v11.2.1-dev1 (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/379059f26713bf7905b6d8449e1a31a4c3bb70b9">#dev1</a></h2>
     <p>
         this small update removes/adds: <br>
