updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,7 +11,19 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 31/08/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 03/09/2022</h1>
+    <hr>
+    <h2> v11.3-dev2 (released 03/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/e1f0bac68d4e712c687e880ee38f5dc38a76f798">#dev2</a></h2>
+    <p>
+        this small update updates: <br>
+        - about text on about.html <br>
+    </p>
+    <h2> v11.3-dev1 (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/dbca42c949f0d5f32dc96984a9d717678db58372">#dev1</a></h2>
+    <p>
+        this update removes/adds: <br>
+        - blog page folder as hannahcodes blog can be found at a different url/location <br>
+        - added link to new blog webpage <a href="https://blog.hannahcodes.co.uk">blog.hannahcodes.co.uk</a> <br>
+    </p>
     <hr>
     <h2> v11.2.1 full release (released 31/08/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/69">#69</a></h2>
     <p>
