updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,6 +13,12 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 03/09/2022</h1>
     <hr>
+    <h2> v11.3-dev3 (released 03/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/581ec87455dcf82dbe36a24bb032937fbcc6cafe">#dev3</a></h2>
+    <p>
+        this small update updates: <br>
+        - work experience about section on about.html <br>
+        - updated readme.md file to include new link to hannahcodes blogs<br>
+    </p>
     <h2> v11.3-dev2 (released 03/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/e1f0bac68d4e712c687e880ee38f5dc38a76f798">#dev2</a></h2>
     <p>
         this small update updates: <br>
