fixed typo on hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -255,7 +255,7 @@ rel="stylesheet">
     - website now uses scss with a compiled css file <br>
     - fixes to images white space on small screens <br>
     - added v10 to old foler/ directory <br>
-    - brand new chnagelog.md file and links to view it on footer and a card on projects.html <br>
+    - brand new changelog.md file and links to view it on footer and a card on projects.html <br>
     - project card thumbnails have been updated <br>
     - removed some about me text <br>
     - improved mobile experience on about.html and index.html <br> 
