updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,6 +13,16 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 03/09/2022</h1>
     <hr>
+    <h2> v11.3-dev3 (released 03/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/70">#70</a></h2>
+    <p>
+        this update removes/adds: <br>
+        - blog page folder as hannahcodes blog can be found at a different url/location <br>
+         - adds link to new blog webpage <a href="https://blog.hannahcodes.co.uk">blog.hannahcodes.co.uk</a> <br>
+        - updated about text on about.html <br>
+        - work experience about section on about.html <br>
+        - updated readme.md file to include new link to hannahcodes blogs <br>
+    </p>
+   
     <h2> v11.3-dev3 (released 03/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/581ec87455dcf82dbe36a24bb032937fbcc6cafe">#dev3</a></h2>
     <p>
         this small update updates: <br>
