--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -13,7 +13,7 @@ rel="stylesheet">
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 03/09/2022</h1>
     <hr>
-    <h2> v11.3-dev3 (released 03/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/70">#70</a></h2>
+    <h2> v11.3-rc1 (released 03/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/70">#70</a></h2>
     <p>
         this update removes/adds: <br>
         - blog page folder as hannahcodes blog can be found at a different url/location <br>
