updated hc and hp changelog aslo brand new hv changelog.html file

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,8 +11,14 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 03/09/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 11/09/2022</h1>
     <hr>
+    <h2> v11.3-dev4 (released 11/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/d1f3a89d6660625f66fc7618de402dadb8ca0b80">#dev4</a></h2>
+    <p>
+        this update includes: <br>
+        - fixes to some nav bar links, which were not link to the correct url <br>
+        - updated readme.md file
+    </p>
     <h2> v11.3-rc1 (released 03/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/70">#70</a></h2>
     <p>
         this update removes/adds: <br>
