updated hc changelog file

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,8 +11,22 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 11/09/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 18/09/2022</h1>
     <hr>
+    <h2> v11.3-rc2 (released 18/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/71">#71</a></h2>
+    <p>
+        this update removes/updates: <br>
+        - old folder <br>
+        - updated links to old version of hannahcodes.co.uk as they can now be found at a new website <br>
+        - fixes to some nav bar links, which were not link to the correct url <br>
+        - updated readme.md file
+    </p>
+    <h2> v11.3-dev5 (released 18/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/2a08a1fd08cd368221d6baf3e0ee953f090147dd">#dev5</a></h2>
+    <p>
+        this update removes/updates: <br>
+        - old folder <br>
+        - updated links to old version of hannahcodes.co.uk as they can now be found at a new website <br>
+    </p>
     <h2> v11.3-dev4 (released 11/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/d1f3a89d6660625f66fc7618de402dadb8ca0b80">#dev4</a></h2>
     <p>
         this update includes: <br>
