updated hc chnagelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,8 +11,13 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 18/09/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 28/09/2022</h1>
     <hr>
+    <h2> v11.3-dev6 (released 19/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/9d75d98da86203bb8e5047e1f334faea34f21756">#dev6</a></h2>
+    <p>
+        this small update removes: <br>
+        - some old blog css code that was no longer needed <br>
+    </p>
     <h2> v11.3-rc2 (released 18/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/71">#71</a></h2>
     <p>
         this update removes/updates: <br>
