updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,8 +11,63 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 28/09/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 01/10/2022</h1>
     <hr>
+    <h2> v11.3 full release (released 01/10/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/74">#74</a></h2>
+    <p>
+         this update includes: <br>
+        - removed blog page folder as hannahcodes blog can be found at a different url/location <br>
+        - adds link to new blog webpage <a href="https://blog.hannahcodes.co.uk">blog.hannahcodes.co.uk</a> <br>
+       - updated about text on about.html <br>
+       - work experience about section on about.html <br>
+       - updated readme.md file to include new link to hannahcodes blogs <br>
+       - removed old folder <br>
+        - updated links to old version of hannahcodes.co.uk as they can now be found at a new website <br>
+        - fixes to some nav bar links, which were not link to the correct url <br>
+        - updated readme.md file <br>
+        - removed some old blog css code that was no longer needed <br>
+        - added new cards on project.html <br>
+        - fixed some image thumbnails not displaying correctly <br>
+        - updated some project links <br> 
+        - project page image thumbnail preview on index.html <br>
+        - fixed an image not displaying  <br>
+    </p>
+    <h2> v11.3-rc4 (released 01/10/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/73">#73</a></h2>
+    <p>
+        this small update updates: <br>
+        - project page image thumbnail preview on index.html <br>
+        - fixed an image not displaying  <br>
+    </p>
+    <h2> v11.3-dev10 (released 01/10/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/90b33416b965272d4c481f6488f4e49b6fda24e6">#dev10</a></h2>
+    <p>
+        this small update updates: <br>
+        - fixed an image not displaying  <br>
+    </p>
+    <h2> v11.3-dev9 (released 01/10/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/6339906632e8884b679ef4e314e5ab15b2eb9fb0">#dev9</a></h2>
+    <p>
+        this small update updates: <br>
+        - updated project page image thumbnail preview on index.html <br>
+    </p>
+    <h2> v11.3-rc3 (released 01/10/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/72">#72</a></h2>
+    <p>
+        this update removes/adds: <br>
+        - some old blog css code that was no longer needed <br>
+        - new card on project.html <br>
+        - fixed some image thumbnails not displaying correctly <br>
+        - updated some project links <br> 
+    </p>
+    <h2> v11.3-dev8 (released 01/10/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/d398f989fbc1eba1061bea3f87ae43dee8780369">#dev8</a></h2>
+    <p>
+        this small update updates: <br>
+       - hp-v4 image thumbnail preview on project.html card <br>
+    </p>
+    <h2> v11.3-dev7 (released 28/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/1eba4193996183b989280ae005b822493332d9e6">#dev7</a></h2>
+    <p>
+        this update adds: <br>
+        - new card on project.html <br>
+        - fixed some image thumbnails not displaying correctly <br>
+        - updated some project links <br>
+    </p>
     <h2> v11.3-dev6 (released 19/09/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/9d75d98da86203bb8e5047e1f334faea34f21756">#dev6</a></h2>
     <p>
         this small update removes: <br>
