--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -19,7 +19,7 @@ rel="stylesheet">
         - removed blog page folder as hannahcodes blog can be found at a different url/location <br>
         - adds link to new blog webpage <a href="https://blog.hannahcodes.co.uk">blog.hannahcodes.co.uk</a> <br>
        - updated about text on about.html <br>
-       - work experience about section on about.html <br>
+       - updated work experience about section on about.html <br>
        - updated readme.md file to include new link to hannahcodes blogs <br>
        - removed old folder <br>
         - updated links to old version of hannahcodes.co.uk as they can now be found at a new website <br>
@@ -29,7 +29,7 @@ rel="stylesheet">
         - added new cards on project.html <br>
         - fixed some image thumbnails not displaying correctly <br>
         - updated some project links <br> 
-        - project page image thumbnail preview on index.html <br>
+        - updated project page image thumbnail preview on index.html <br>
         - fixed an image not displaying  <br>
     </p>
     <h2> v11.3-rc4 (released 01/10/2022) <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/73">#73</a></h2>
