updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,8 +11,61 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 19/10/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 24/10/2022</h1>
     <hr>
+    <h2> v11.3.1 - 24/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/76">#76</a></h2>
+    <h3> added </h3>
+    <ul>
+        <li>new project cards for hannahcodes.co.uk - v11.2, v11.2.1, v11.3 and v11.3.1</li>
+        </ul>
+        <h3> fixed </h3>
+    <ul>
+        <li>typos on readme.md file</li>
+        </ul>
+    <h3> changed </h3>
+    <ul>
+        <li>index.html latest blog section, which now shows post 7 and 8</li>
+        <li>hc changelog thumbnail image preview</li>
+        <li>readme.md file</li>
+        </ul>
+        <hr class="test">
+    <h2> v11.3.1 - rc 2 - 24/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/76">#76</a></h2>
+    <h3> added </h3>
+    <ul>
+        <li>new project cards for hannahcodes.co.uk - v11.2, v11.2.1, v11.3 and v11.3.1</li>
+        </ul>
+        <h3> fixed </h3>
+    <ul>
+        <li>typos on readme.md file</li>
+        </ul>
+    <h3> changed </h3>
+    <ul>
+        <li>hc changelog thumbnail image preview</li>
+        <li>readme.md file</li>
+        </ul>
+        <hr class="test">
+        <h2> v11.3.1 - dev 5 - 24/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/ce089037b38fbefe3af36677f6a8114279f316a7">#dev5</a></h2>
+        <h3> fixed </h3>
+        <ul>
+            <li>typos on readme.md file</li>
+            </ul>
+        <hr class="test">
+        <h2> v11.3.1 - dev 3/4 - 24/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/d1881dcfedb9ffaa05a4218ce024cba8b2dcc1ed">#dev3</a> <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/5699148b2f93e7b5f0b6c8624db0a8e97962e30e">#dev4</a></h2>
+        <h3> changed </h3>
+        <ul>
+            <li>readme.md file</li>
+            </ul>
+    <hr class="test">
+    <h2> v11.3.1 - dev 2 - 24/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/d1d75d3c3813f1d7ab76918dd7d8714e90e295df">#dev2</a></h2>
+    <h3> added</h3>
+    <ul>
+        <li>new project cards for hannahcodes.co.uk - v11.2, v11.2.1, v11.3 and v11.3.1</li>
+        </ul>
+        <h3> changed</h3>
+    <ul>
+        <li>hc changelog thumbnail image preview</li>
+        </ul>
+        <hr class="test">
     <h2> v11.3.1 - rc 1 - 15/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/75">#75</a></h2>
     <h3> changed </h3>
     <ul>
