updated hc changelog

--- a/hannahcodes/changelog.html
+++ b/hannahcodes/changelog.html
@@ -11,9 +11,69 @@ rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
 <body class="changelog_body">
-    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 24/10/2022</h1>
+    <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 26/10/2022</h1>
     <hr>
-    <h2> v11.3.1 - 24/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/76">#76</a></h2>
+    <h2> v11.3.2 - 26/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/80">#80</a></h2>
+    <h3> added </h3>
+    <ul>
+        <li>new project card for hannahcodes.co.uk v11.3.2</li>
+    </ul>
+    <h3> fixed </h3>
+    <ul>
+        <li>blog post 7 and 8 links</li>
+    </ul>
+    <h3> changed </h3>
+    <ul>
+        <li>index.html latest blog section, which now shows post 9</li>
+        <li>hc thumbnail image preview for v11.3+</li>
+        <li>readme.md file</li>
+        <li>formatted scss/css file</li>
+    </ul><hr class="test">
+    <h2> v11.3.2 - rc 2 - 26/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/79">#79</a></h2>
+    <h3> changed </h3>
+    <ul>
+        <li>readme.md file</li>
+    </ul>
+    <hr class="test">
+    <h2> v11.3.2 - dev 2 - 26/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/d5c87e7e9443c7b326f1753e9d2c7b6411cb2b0d">#dev2</a></h2>
+    <h3> changed </h3>
+    <ul>
+        <li>readme.md file</li>
+    </ul>
+    <hr class="test">
+    <h2> v11.3.2 - rc 1 - 26/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/78">#78</a></h2>
+    <h3> added </h3>
+    <ul>
+        <li>new project card for hannahcodes.co.uk v11.3.2</li>
+    </ul>
+    <h3> fixed </h3>
+    <ul>
+        <li>blog post 7 and 8 links</li>
+    </ul>
+    <h3> changed </h3>
+    <ul>
+        <li>index.html latest blog section, which now shows post 9</li>
+        <li>hc thumbnail image preview for v11.3+</li>
+        <li>formatted scss/css file</li>
+    </ul>
+    <hr class="test">
+    <h2> v11.3.2 - dev 1 - 26/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/commit/adecbcb5ef122020df613ee3fabafb74c87c408d">#dev1</a></h2>
+    <h3> added </h3>
+    <ul>
+        <li>new project card for hannahcodes.co.uk v11.3.2</li>
+    </ul>
+    <h3> fixed </h3>
+    <ul>
+        <li>blog post 7 and 8 links</li>
+    </ul>
+    <h3> changed </h3>
+    <ul>
+        <li>index.html latest blog section, which now shows post 9</li>
+        <li>hc thumbnail image preview for v11.3+</li>
+        <li>formatted scss/css file</li>
+    </ul>
+    <hr>
+    <h2> v11.3.1 - 24/10/2022 <a href="https://github.com/Transgirlcoding/hannahcodes.co.uk/pull/77">#77</a></h2>
     <h3> added </h3>
     <ul>
         <li>new project cards for hannahcodes.co.uk - v11.2, v11.2.1, v11.3 and v11.3.1</li>
