--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 rel="stylesheet">
 <link rel="icon" href="/assets/images/hc-with-bg-v2.ico" />
 </head>
-<body>
-    <h1 class="index_h1">view all changelog here</h1>
+<body> 
+    <h1 class="index_h1">view all changelog here test</h1>
     <div class="project_band">
         <div class="item-5">
           <div class="project_card project_card_a">
